# TritonLLM

./: README.md  README.zh.md  bench_moe_block_k.py  bench_moe_decode_e2e.py  pyproject.toml
examples/: bench_chat.py  bench_decode.py  bench_moe.py  only_output.py
tritonllm/: __init__.py  jit_backend.py  utils.py
tritonllm/gpt_oss/: bench.py  chat.py  context_window.py  generate.py
tritonllm/gpt_oss/triton/: attention.py  attention_ref.py  attention_tt.py  attention_tt_decode.py  attention_tt_tma.py  attention_with_tma.py  expert_cache.py  model.py  moe.py  scratch_pool.py  triton_kernels.py  weights.py
tritonllm/triton_kernels/: specialize.py  target_info.py  tensor.py
tritonllm/triton_kernels/matmul_ogs_details/: _common.py  _finalize_matmul.py  _matmul_ogs.py  _p_matmul_ogs.py
tritonllm/triton_kernels/numerics_details/: flexpoint.py
tritonllm/triton_kernels/tensor_details/layout_details/: hopper_value.py
